--- a/app/design.css
+++ b/app/design.css
@@ -3,10 +3,16 @@
 }
 
 body {
-	background-image: url(/ui/pokemon-ruby-sun.png), url(/ui/pokemon-ruby-clouds.png), url(/ui/pokemon-ruby-ground.png);
-	background-repeat: repeat-x, repeat-x;
-	background-position: -10% top, -10% 63%, -10% bottom;
-	background-size: auto 38%, auto 42%, auto 22%;
+	background-image:
+		url(/ui/pokemon-ruby-sun-overlay.png)
+		, url(/ui/pokemon-ruby-clouds-overlay-a.png)
+		, url(/ui/pokemon-ruby-clouds-overlay-b.png)
+		, url(/ui/pokemon-ruby-sky-overlay.png)
+		, url(/ui/pokemon-ruby-ground.png);
+	background-repeat: repeat-x, repeat-x, repeat-x, repeat-x, repeat-x;
+	background-position: 0% top, -10% 62%, -10% 62%, -10% 62%, -10% bottom;
+	background-size: auto 36.5%, auto 42%, auto 42%, auto 42%, auto 21.5%;
+	background-color: #357aab;
 	overflow: hidden;
 }
 
