--- a/app/actor/spring.css
+++ b/app/actor/spring.css
@@ -1,4 +1,5 @@
 .actor-item.actor-spring {
+	position: absolute;
 	width: 32px;
 	height: 32px;
 }
@@ -22,7 +23,7 @@
 	height: 8px;
 	--sprite-offset-x: -80px;
 	--sprite-offset-y: -92px;
-	transition: top 0.1s ease-out;
+	transition: top 0.4s ease-out 0.0s;
 }
 
 .actor-item.actor-spring .spring-pad:not([data-color=""]) {
@@ -38,7 +39,6 @@
 }
 
 .actor-item.actor-spring.collision-top[data-colliding=true] .spring-pad {
-	transition: top 0.1s ease-in;
 	transition: top 0s;
 	z-index: 1;
 	top: -52px;
