--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -56,6 +56,7 @@ html, body {
 .viewport,
 .viewport-caption {
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+	filter: brightness(75%) contrast(125%);
 }
 
 .viewport-header,
