--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -56,7 +56,7 @@ html, body {
 .viewport,
 .viewport-caption {
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-	filter: brightness(75%) contrast(125%);
+
 }
 
 .viewport-header,
@@ -153,6 +153,10 @@ html, body {
 	z-index: 999;
 }
 
+.viewport-background[data-layer="0"] {
+
+}
+
 .viewport-background[data-layer="2"] {
 	z-index: 1000;
 }
@@ -162,9 +166,8 @@ html, body {
 }
 
 .viewport-background > div {
-	filter: brightness(75%);
 	background-repeat: no-repeat;
-	/*border-bottom: 1px solid #CCC;
+		/*border-bottom: 1px solid #CCC;
 	border-right: 1px solid #CCC;
 	box-sizing: border-box;*/
 }
