--- a/app/design.css
+++ b/app/design.css
@@ -2,6 +2,7 @@
 	background-color: #fcc203;
 }
 
+.viewport.fullscreen,
 body {
 	background-image:
 		url(/ui/pokemon-ruby-sun-overlay.png)
@@ -10,7 +11,7 @@ body {
 		, url(/ui/pokemon-ruby-sky-overlay.png)
 		, url(/ui/pokemon-ruby-ground.png);
 	background-repeat: repeat-x, repeat-x, repeat-x, repeat-x, repeat-x;
-	background-position: 0% top, 0% 62%, 0% 62%, 0% 62%, 0% bottom;
+	background-position: 0% top, 0% 63%, 0% 63%, 0% 63%, 0% bottom;
 	background-size: auto 37%, auto 42%, auto 42%, auto 42%, auto 21.5%;
 	background-color: #357aab;
 	overflow: hidden;
